--- a/[GK]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[GK]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -12,11 +12,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "gppZ2AB2kjN7"
+        "id": "gppZ2AB2kjN7",
+        "outputId": "291abc75-738f-4b1e-c78d-1114ad05d82c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found existing installation: jupyter 1.1.1\n",
+            "Uninstalling jupyter-1.1.1:\n",
+            "  Would remove:\n",
+            "    /usr/local/lib/python3.10/dist-packages/jupyter-1.1.1.dist-info/*\n",
+            "Proceed (Y/n)? Y\n",
+            "  Successfully uninstalled jupyter-1.1.1\n"
+          ]
+        }
+      ],
       "source": [
         "# Preliminary setup for new runtime\n",
         "# !pip uninstall -y tensorflow\n",
