--- a/[GK]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
+++ b/[GK]_05_transfer_learning_in_tensorflow_part_2_fine_tuning.ipynb
@@ -12,28 +12,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
-        "id": "gppZ2AB2kjN7",
-        "outputId": "291abc75-738f-4b1e-c78d-1114ad05d82c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "gppZ2AB2kjN7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found existing installation: jupyter 1.1.1\n",
-            "Uninstalling jupyter-1.1.1:\n",
-            "  Would remove:\n",
-            "    /usr/local/lib/python3.10/dist-packages/jupyter-1.1.1.dist-info/*\n",
-            "Proceed (Y/n)? Y\n",
-            "  Successfully uninstalled jupyter-1.1.1\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Preliminary setup for new runtime\n",
         "# !pip uninstall -y tensorflow\n",
@@ -50,7 +33,7 @@
       },
       "outputs": [],
       "source": [
-        "!nvidia-smi"
+        "# !nvidia-smi"
       ]
     },
     {
@@ -62,10 +45,15 @@
       "outputs": [],
       "source": [
         "# Get helper_functions.py from github\n",
-        "# !wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
         "\n",
         "# Import functions to use from above file\n",
-        "from helper_functions import (create_tensorboard_callback,plot_loss_curves, unzip_data,walk_through_dir,)"
+        "from helper_functions import (\n",
+        "    create_tensorboard_callback,\n",
+        "    plot_loss_curves,\n",
+        "    unzip_data,\n",
+        "    walk_through_dir,\n",
+        ")"
       ]
     },
     {
